# bazarr-topn

./: .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml
docs/superpowers/plans/: 2026-04-18-log-capture-detection.md  2026-04-18-sidecar-search-ok.md  2026-04-28-arr-webhook-receiver-plan.md
docs/superpowers/specs/: 2026-04-18-log-capture-detection-design.md  2026-04-18-sidecar-search-ok-design.md  2026-04-28-arr-webhook-receiver-design.md
scripts/: repair_sidecars.py
src/bazarr_topn/: __init__.py  __main__.py  bazarr_client.py  cli.py  config.py  naming.py  scanner.py  sidecar.py  subtitle_finder.py  sync.py  watcher.py  webhook.py
tests/: conftest.py  test_bazarr_client.py  test_cli.py  test_config.py  test_naming.py  test_scanner.py  test_sidecar.py  test_subtitle_finder.py  test_sync.py  test_watcher.py  test_webhook.py
